--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.05);
     }
-    h1, h2 {
+    h1, h2, h3 {
       color: #004a99;
     }
     ul {
@@ -30,6 +30,22 @@
     .contact {
       margin-top: 20px;
       font-size: 16px;
+    }
+    .awards {
+      margin-top: 30px;
+    }
+    .awards table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    .awards th, .awards td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: center;
+    }
+    .awards th {
+      background-color: #e6f0ff;
     }
   </style>
 </head>
@@ -46,7 +62,7 @@
 
     <h2>🎯 교육과정 특징</h2>
     <ul>
-      <li>스크래치 / 엔트리 / 파이썬 / C언어 / 웹 개발 단계별 수업 구성</li>
+      <li>스크래치 / 엔트리 / 파이썬 / C언어 단계별 수업 구성</li>
       <li>AI, 로봇, 파이썬 등 최신 SW 트렌드 반영</li>
       <li>코딩 대회 대비 특강반</li>
     </ul>
@@ -59,15 +75,48 @@
       <li>학생의 자존감을 키우는 ‘자기주도 프로젝트’ 지원</li>
     </ul>
 
+    <div class="awards">
+      <h3>🏆 대회 수상 명단</h3>
+      <p><strong>제28회 서울특별시 전국 ICT 창의성 대회</strong><br>
+      대상: 조강희<br>
+      금상: 홍민서<br>
+      은상: 박주한, 임건우<br>
+      장려상: 최성윤, 홍찬택, 박규빈, 이정재, 홍준서, 정여은</p>
+
+      <p><strong>제15회 전국 창의문제 해결능력 경진대회</strong><br>
+      예선 합격팀:<br>
+      초등부 – 코요태(이태준, 문서희, 염지민)<br>
+      중등부 – 차에치인은우(하헌찬, 김표산, 박시현)</p>
+
+      <p><strong>2024 DSC 모빌리티 창의과학 신기술 경진대회</strong><br>
+      은상: 최성윤, 최나은<br>
+      동상: 최라엘, 신준태<br>
+      장려상: 홍찬택, 홍민서, 최영진, 최승훈, 유시율, 정래현, 강준영, 강한이,<br>
+      문서희, 박정현, 박지유, 이은서, 김린하, 서지민, 박주원, 정현호,<br>
+      김승아, 김하준, 함재아, 조항진, 이다겸</p>
+
+      <p><strong>제18회 전국 ITOP 경진대회</strong><br>
+      충청북부지역센터장상<br>
+      고등부: 정여은<br>
+      중등부: 조준범<br>
+      초등부: 최성윤<br>
+      한국생산성본부 회장상 – 중등부: 이정재</p>
+
+      <p><strong>제6회 전국 학생 코딩 경진대회</strong><br>
+      AI융합부문 – 은상: 가지환, 김예준<br>
+      AI부문 – 은상: 하헌찬 / 장려상: 공연재, 김규완, 박세용, 박시현, 윤호영, 홍준서, 임건우, 조강희, 조준범, 이희담, 최나현<br>
+      블럭코딩부문 – 장려상: 김린하, 문서희</p>
+    </div>
+
     <p><strong>서산 지역에서 단단하고 깊이 있는 코딩 교육을 찾는다면, 서산코딩SW효성이 정답입니다.</strong><br>
     아이의 잠재력을 믿고, 함께 성장하는 배움의 공간이 되어드릴게요.</p>
 
     <div class="contact">
       📍 위치: 충남 서산시 예천3로43 효성 106-605<br>
       📞 문의: 010-7442-0933<br>
-      
     </div>
   </div>
 </body>
 </html>
+
 
